# mediaworld-scraper

./: .gitignore  mypy.ini  products.json  pyproject.toml
src/: categories.py  db.py  scraper.py
