[tool.poetry]
name = "mediaworld"
version = "0.1.0"
description = ""
authors = ["Riccardo Albertazzi <ra@bendingspoons.com>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.8.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"

[tool.black]
line-length = 100
exclude = '''
(
    \.DS_Store |
    \.githooks |
    \.html$ |
    \.idea |
    \.json$ |
    \.pyc$ |
    \.sql$ |
    \.vscode |
    \.venv |
    node_modules
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
